Search and archive pages, if no listings found, page is blank - FIXED
Added developer settings section, added setting to disable advanced settings toggle - ADDED
OSM add listing page JS error - FIXED
Autozoom not working for single marker on the map - FIXED
Export button on FireFox causes page refresh which means no access to CSV - FIXED

v2.0.0.3-beta
Shortcode builder button added to pages/posts - ADDED

v2.0.0.2-beta
Business Hours not working on map popup - FIXED
Backend author filed should show all users not only authors - FIXED
Backend add listing has no validation - FIXED
Lat/Lon HTML5 number inputs can show comma instead of decimal depending on browser language - FIXED
submit_ip is varchar(20) which will not support IPv6 address - FIXED
Tab description does not respect non-HTML line breaks - FIXED
Added design setting to be able to change what page template file the details page uses for theme compatibility - ADDED

v2.0.0.1-beta
More then one image slider with same id on same page not working - FIXED
Reviews count not showing on listing - FIXED
Category ID settings column too wide - FIXED
GD > Listings widget now used Archive item page template - FIXED
CPT custom fields settings show unused save button - FIXED
Default location setting missing the "Set address on map" button - FIXED

v2.0.0.0-beta
Initial beta release - INFO

v1.6.22
Comment replies should not add review structured data - FIXED
Hooks added to customize texts in location description when for empty location - ADDED
Popular post widget view all link should have url with current language - FIXED
Mobile details page tabs now close and scroll to show tab title - CHANGED
Sometime click on pinpoint doesn't opens the map infowindow - FIXED
Category top description not saved from new category form - FIXED
Fix flexslider JS conflict - FIXED
Option added in popular post widget to hide widget if no listings found - ADDED
Disable review submitting on draft/trash/pending listing - CHANGED